fix ton-connect-modal's z-index for when opened from bottom-sheet

--- a/src/modules/base/styles/overrides.css
+++ b/src/modules/base/styles/overrides.css
@@ -23,6 +23,10 @@
   }
 }
 
+[data-tc-modal] {
+  z-index: 2000;
+}
+
 /*
 * ************** Drawer *****************
 */
